--- a/client/index-style.css
+++ b/client/index-style.css
@@ -113,3 +113,92 @@ h1 {
     line-height: 24px;
     text-align: center;
 }
+
+.loading-screen {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.pop-up-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80vw;
+    height: 10vh;
+    background: #303030;
+    border-radius: 20px;
+    border: 4px #303030 solid;
+
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.06), 5px 5px 10px rgba(0, 0, 0, 0.5), inset -5px -5px 10px rgba(255, 255, 255, 0.06), inset 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+/* LOADING SCREEN */
+.loading-animation {
+    background: #303030;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    height: 40px;
+    width: 290px;
+    overflow: hidden;
+    position: relative;
+}
+
+.c {
+    display: inline-block;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    left:-10px;
+    background-color: #EA4C88;
+    border-radius: 50%;
+    animation: move 3s linear infinite, mint 1.5s linear infinite alternate;
+    
+}
+
+@keyframes move {
+    0%{
+        transform: translateX(-10px);
+    }
+    10%{
+        transform: translateX(120px);
+    }
+    50%{
+        transform: translateX(150px);
+    }
+    70%{
+        transform: translateX(170px);
+    }
+    80%,100%{
+        transform: translateX(315px);
+    }
+}
+@keyframes mint {
+    0%{
+        height: 10px;
+        width: 10px;
+    }
+    100%{
+        height: 30px;
+        width: 30px;
+    }
+}
+
+.c:nth-child(0) {
+    animation-delay: 0s,0s;
+}
+.c:nth-child(1) {
+    animation-delay: 0.2s,0.2s;
+}
+.c:nth-child(2) {
+    animation-delay: 0.4s,0.4s;
+}
+.c:nth-child(3) {
+    animation-delay: 0.5s,0.5s;
+}
